# spectrum_v1

./: CMakeLists.txt  README.md  main.cpp
inc/device/: sdrDevice.h
inc/draw/: draw.h
inc/fix/: dataBuffer.h  fftw_common.h  iqSave.h  my_math.h  source_creator.h
inc/process/: spectrumProcrss.h
inc/qt/: center_frequency.h  control_option.ui  main_widget.h  main_widget.ui  qcustomplot.h  ui_control_option.h  ui_main_widget.h
src/device/: sdrDevice.cpp
src/draw/: draw.cpp
src/fix/: fftw.cpp  iqSave.cpp  log.cpp  my_math.cpp  source_creator.cpp
src/process/: spectrumProcess.cpp
src/qt/: center_frequency.cpp  main_widget.cpp  qcustomplot.cpp
